@@ -33,12 +33,18 @@ invocations.
 *** The `Status.getBuildSets` method now returns its result via Deferred.
 
 *** The `BuilderControl.getPendingBuilds` method has been renamed to
-`getPendingBuildRequestControls`.  Both now return their results via Deferred.
+`getPendingBuildRequestControls`; `BuilderStatus.getPendingBuilds` has been
+renamed to `getPendingBuildStatuses`.  Both now return their results via
+Deferred.
 
 *** The utility method `Builder.getOldesetRequestTime` now returns its result
 via a Deferred, and that result is now a DateTime object.
 
 *** The remote BuildSetStatus method `waitForSuccess` is no longer available.
+
+*** The BuildRequestStatus methods `getSubmitTime` and `getSourceStamp` now
+return their results via a Deferred.  The `asDict` method omits these values,
+as it retuns synchronously.
 
 ** Scheduler Improvements
 
